[package]
name = "pg-backfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2.5", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"]}
uuid = "1.4.0"